--- a/site/Office-Dashboard/Overview/index.html
+++ b/site/Office-Dashboard/Overview/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="author" content="Yourdrs Team" /><link rel="canonical" href="https://yourdrs.com/help/Office-Dashboard/Overview/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="author" content="Yourdrs Team" /><link rel="canonical" href="https://yourdrs.com/help/office-dashboard/overview/" />
       <link rel="shortcut icon" href="../../img/favicon.ico" />
     <title>Overview - Yourdrs Help</title>
     <link rel="stylesheet" href="../../css/theme.css" />
@@ -13,8 +13,8 @@
       <script>
         // Current page data
         var mkdocs_page_name = "Overview";
-        var mkdocs_page_input_path = "Office-Dashboard/Overview.md";
-        var mkdocs_page_url = "/help/Office-Dashboard/Overview/";
+        var mkdocs_page_input_path = "office-dashboard/overview.md";
+        var mkdocs_page_url = "/help/office-dashboard/overview/";
       </script>
     
     <!--[if lt IE 9]>
@@ -165,7 +165,7 @@ The Office Dashboard allows staff to <strong>schedule, track, and manage appoint
 - Yes! Select multiple cards (Shift+Click) and drag to the new column.  </p>
 <hr />
 <h2 id="visual-guide">Visual Guide</h2>
-<p><img alt="Office Dashboard Screenshot" src="placeholder_link_to_screenshot.png" /><br />
+<p><img alt="Office Dashboard Screenshot" src="../Office-Dashboard/asset/Overview.png" /><br />
 <em>Annotations</em>:<br />
 1. <strong>A</strong>: Filters section.<br />
 2. <strong>B</strong>: Kanban columns with appointment cards.<br />
